--- a/main.tex
+++ b/main.tex
@@ -139,12 +139,26 @@ Craig Putnam \\
 \begin{appendices}
 %\include{Appendices/Kit_Components}
 %\include{Appendices/GanttCharts}
+\pagenumbering{arabic}% resets `page` counter to 1
+\renewcommand*{\thepage}{A\arabic{page}}
 \include{Appendices/Past_Work}
+\pagenumbering{arabic}% resets `page` counter to 1
+\renewcommand*{\thepage}{B\arabic{page}}
 \include{Appendices/Motor_Driver}
+\pagenumbering{arabic}% resets `page` counter to 1
+\renewcommand*{\thepage}{C\arabic{page}}
 \include{Appendices/Motor_Driver_Current}
+\pagenumbering{arabic}% resets `page` counter to 1
+\renewcommand*{\thepage}{D\arabic{page}}
 \include{Appendices/Load_Cell_Amp}
+\pagenumbering{arabic}% resets `page` counter to 1
+\renewcommand*{\thepage}{E\arabic{page}}
 \include{Appendices/CAN_Transceiver}
+\pagenumbering{arabic}% resets `page` counter to 1
+\renewcommand*{\thepage}{F\arabic{page}}
 \include{Appendices/Joint_Board_Booster}
+\pagenumbering{arabic}% resets `page` counter to 1
+\renewcommand*{\thepage}{G\arabic{page}}
 \include{Appendices/TM4C_Dev_Board}
 
 \end{appendices}
