Appendix numbering for solidworks drawings

--- a/main.tex
+++ b/main.tex
@@ -160,6 +160,8 @@ Craig Putnam \\
 \pagenumbering{arabic}% resets `page` counter to 1
 \renewcommand*{\thepage}{G\arabic{page}}
 \include{Appendices/TM4C_Dev_Board}
+\pagenumbering{arabic}% resets `page` counter to 1
+\renewcommand*{\thepage}{F\arabic{page}}
 \include{Appendices/SolidworksDrawings}
 
 
