fixed appendices title stretch issue, no longer stretching

--- a/Appendices/CAN_Transceiver.tex
+++ b/Appendices/CAN_Transceiver.tex
@@ -1,4 +1,6 @@
+\begin{flushleft}
 \section{CAN Transceiver}
+\end{flushleft}
 \label{app:can_transceiver}
 \centering
 \includegraphics[page=1,width=\textwidth,angle=270]{PDFs/can_transceiver.PDF} \newpage
