--- a/Appendices/Joint_Board_Booster.tex
+++ b/Appendices/Joint_Board_Booster.tex
@@ -1,4 +1,6 @@
+\begin{flushleft}
 \section{Joint Board Boosterpack}
+\end{flushleft}
 \label{app:joint_board_boosterpack}
 \centering
 \includegraphics[page=1,width=\textwidth,angle=270]{PDFs/joint_board_boosterpack.PDF} \newpage
