--- a/Appendices/Motor_Driver.tex
+++ b/Appendices/Motor_Driver.tex
@@ -1,4 +1,6 @@
+\begin{flushleft}
 \section{Motor Driver}
+\end{flushleft}
 \label{app:motor_driver}
 \centering
 \includegraphics[page=1,width=\textwidth,angle=270]{PDFs/motor_driver.PDF} \newpage
