--- a/Appendices/SolidworksDrawings.tex
+++ b/Appendices/SolidworksDrawings.tex
@@ -1,4 +1,7 @@
+\begin{flushleft}
 \section{Solidworks Drawings}
+\end{flushleft}
 \label{app:SolidworksDrawings}
-\centering
+\begin{center}
 \includegraphics[page=1,width=\textwidth,angle=270]{Solidworks/bottom_plate} \newpage
+\end{center}
