--- a/Appendices/TM4C_Dev_Board.tex
+++ b/Appendices/TM4C_Dev_Board.tex
@@ -1,6 +1,9 @@
+\begin{flushleft}
 \section{TM4C123GH6PM Dev Board}
+\end{flushleft}
 \label{app:tm4c_dev_board}
-\centering
+\begin{center}
 \includegraphics[page=1,width=\textwidth,angle=270]{PDFs/tm4c123_dev_board.PDF} \newpage
 \includegraphics[page=2,width=\textwidth,angle=270]{PDFs/tm4c123_dev_board.PDF} \newpage
 \includegraphics[page=3,width=\textwidth,angle=270]{PDFs/tm4c123_dev_board.PDF} \newpage
+\end{center}
