--- a/Appendices/Load_Cell_Amp.tex
+++ b/Appendices/Load_Cell_Amp.tex
@@ -1,4 +1,6 @@
+\begin{flushleft}
 \section{Load Cell Amplifier}
+\end{flushleft}
 \label{app:load_cell_amp}
 \centering
 \includegraphics[page=1,width=\textwidth,angle=270]{PDFs/load_cell_amp.PDF} \newpage
