--- a/Appendices/Motor_Driver_Current.tex
+++ b/Appendices/Motor_Driver_Current.tex
@@ -1,4 +1,6 @@
+\begin{flushleft}
 \section{Motor Driver with Current Sensor}
+\end{flushleft}
 \label{app:motor_driver_current}
 \centering
 \includegraphics[page=1,width=\textwidth,angle=270]{PDFs/motor_driver_with_current_sensor.PDF} \newpage
