added solidworks stuff

--- a/Appendices/SolidworksDrawings.tex
+++ b/Appendices/SolidworksDrawings.tex
@@ -1,4 +1,13 @@
 \section{Solidworks Drawings}
 \label{app:SolidworksDrawings}
 \centering
-\includegraphics[page=1,width=\textwidth,angle=270]{Solidworks/bottom_plate} \newpage
+\includegraphics[width=\textwidth,angle=270]{Solidworks/bottom_plate} \newpage
+\includegraphics[width=\textwidth,angle=270]{Solidworks/bottom_plate_cradle} \newpage
+\includegraphics[width=\textwidth,angle=270]{Solidworks/d_shaft_reciever} \newpage
+\includegraphics[width=\textwidth,angle=270]{Solidworks/end_effector_mount} \newpage
+\includegraphics[width=\textwidth,angle=270]{Solidworks/end_of_arm} \newpage
+\includegraphics[width=\textwidth,angle=270]{Solidworks/idler_shaft} \newpage
+\includegraphics[width=\textwidth,angle=270]{Solidworks/main_shaft} \newpage
+\includegraphics[width=\textwidth,angle=270]{Solidworks/servo_horn_connector} \newpage
+\includegraphics[width=\textwidth,angle=270]{Solidworks/sidewall} \newpage
+\includegraphics[width=\textwidth,angle=270]{Solidworks/top_plate} \newpage
