New table, update past work'

--- a/Appendices/Past_Work.tex
+++ b/Appendices/Past_Work.tex
@@ -344,7 +344,7 @@ Arm structure is not something we wanted to define, since the end user is suppos
 
 Budget will likely be the biggest constraint with this project. The stipend given to students by WPI may not cover all of the costs incurred when constructing this robot, and the rest will be paid out of pocket by the student team. Another large constraint will be access to a 3D printer for prototyping. It will be crucial to start prototyping early to accomplish all of the design goals. Time will also be a major concern, since there are many time consuming aspects to this project.
 
-\subsection{Acceptance Criteria}
+\subsection{Project Goals}
 Acceptance criteria for this project will be broken into 5 major categories: Sticks, Joints, End effector, Base, Software application, Code library
 
 \subsubsection{Sticks}
