--- a/Appendices/Past_Work.tex
+++ b/Appendices/Past_Work.tex
@@ -1,4 +1,4 @@
-\section{Early Project Iteration} \\
+\section{Early Project Iteration}
 \label{app:Early-Project-Iteration}
 \subsection{Introduction} 
 % Section outline:
