Move Abstract to before table of contents

--- a/main.tex
+++ b/main.tex
@@ -112,6 +112,7 @@ Craig Putnam \\
 %%%% Document begins here %%%%
 \newpage
 	\pagenumbering{roman}
+	\include{Chapters/Abstract}
 	\tableofcontents
 	\newpage
 	\listoffigures
