--- a/main.tex
+++ b/main.tex
@@ -129,7 +129,7 @@ Craig Putnam \\
 %\subfile{Chapters/Acceptance_Criteria}
 %\subfile{Chapters/Test_and_Validation}
 \include{Chapters/Testing}
-% \subfile{Chapters/Conclusion}
+\include{Chapters/Conclusion}
 %TODO Recommendations for future work
 %TODO Table of acronyms
 \pagebreak
