Figured out how to cite datasheets

--- a/export.bib
+++ b/export.bib
@@ -198,4 +198,31 @@
 	howpublished{https://www.lulzbot.com/store/printers/lulzbot-taz-6}
 }
 
+@manual{Allegro:ACS722
+	organization  = "Allegro Microsystems",
+	title         = "High  Accuracy,  Galvanically  Isolated  Current  Sensor  IC",
+	number        = "ACS722",
+	year          =  2015,
+	note          = "Rev. 2"
+}
+
+@manual{
+	organization  = "austria micro systems",
+	title         = "AS5055 Adapterboard Operation Manual",
+	number        = "AS5055",
+	year          =  2010,
+	month		  =  5,
+	note          = "Rev. 1.1"
+}
+
+@manual{
+	organization  = "austria micro systems",
+	title         = "Low  Power  12-Bit  Magnetic  Position  Sensor",
+	number        = "AS5055",
+	year          =  2014,
+	month		  =  10,
+	note          = "Rev. v2-06"
+}
+
+
 
