Added encoder filtering

--- a/main.tex
+++ b/main.tex
@@ -145,25 +145,28 @@ Craig Putnam \\
 \include{Appendices/Past_Work}
 \pagenumbering{arabic}% resets `page` counter to 1
 \renewcommand*{\thepage}{B\arabic{page}}
-\include{Appendices/Motor_Driver}
+\include{Appendices/SolidworksDrawings}
 \pagenumbering{arabic}% resets `page` counter to 1
 \renewcommand*{\thepage}{C\arabic{page}}
-\include{Appendices/Motor_Driver_Current}
+\include{Appendices/Motor_Driver}
 \pagenumbering{arabic}% resets `page` counter to 1
 \renewcommand*{\thepage}{D\arabic{page}}
-\include{Appendices/Load_Cell_Amp}
+\include{Appendices/Motor_Driver_Current}
 \pagenumbering{arabic}% resets `page` counter to 1
 \renewcommand*{\thepage}{E\arabic{page}}
+\include{Appendices/Load_Cell_Amp}
+\pagenumbering{arabic}% resets `page` counter to 1
+\renewcommand*{\thepage}{F\arabic{page}}
 \include{Appendices/CAN_Transceiver}
 \pagenumbering{arabic}% resets `page` counter to 1
-\renewcommand*{\thepage}{F\arabic{page}}
+\renewcommand*{\thepage}{G\arabic{page}}
 \include{Appendices/Joint_Board_Booster}
 \pagenumbering{arabic}% resets `page` counter to 1
-\renewcommand*{\thepage}{G\arabic{page}}
+\renewcommand*{\thepage}{H\arabic{page}}
 \include{Appendices/TM4C_Dev_Board}
 \pagenumbering{arabic}% resets `page` counter to 1
-\renewcommand*{\thepage}{F\arabic{page}}
-\include{Appendices/SolidworksDrawings}
+\renewcommand*{\thepage}{I\arabic{page}}
+\include{Appendices/Code_Repos}
 
 
 \end{appendices}
