Add all datasheets to bibliography section

--- a/export.bib
+++ b/export.bib
@@ -109,7 +109,7 @@
 @misc{Choose_Sensor_Technology,
 	author={BEI Sensors},
 	title={Choosing the Right Sensor Technology},
-	note={Accessed on Obtober 13, 2017},
+	note={Accessed on October 13, 2017},
 	howpublished={http://www.beisensors.com/customer-resources/bei-choosing-the-right-sensor-technology.html}
 }
 @article{Pot_vs_Sensor,
@@ -185,17 +185,17 @@
 @misc{Solidworks,
 	title={Solidworks},
 	author={Dassault Systems},
-	howpublished{https://www.solidworks.com/}
+	howpublished={https://www.solidworks.com/}
 }
 @misc{Cura,
 	title={Ultimaker Cura Software},
 	author={Ultimaker},
-	howpublished{https://ultimaker.com/en/products/ultimaker-cura-software}
+	howpublished={https://ultimaker.com/en/products/ultimaker-cura-software}
 }
 @misc{Taz6,
 	title={Lulzbot Taz 6},
 	author={Lulzbot},
-	howpublished{https://www.lulzbot.com/store/printers/lulzbot-taz-6}
+	howpublished={https://www.lulzbot.com/store/printers/lulzbot-taz-6}
 }
 
 @manual{Allegro:ACS722
@@ -207,7 +207,7 @@
 }
 
 @manual{
-	organization  = "austria micro systems",
+	organization  = Austria micro systems",
 	title         = "AS5055 Adapterboard Operation Manual",
 	number        = "AS5055",
 	year          =  2010,
@@ -217,12 +217,101 @@
 
 @manual{
 	organization  = "austria micro systems",
-	title         = "Low  Power  12-Bit  Magnetic  Position  Sensor",
-	number        = "AS5055",
+	title         = "AS5055A Low  Power  12-Bit  Magnetic  Position  Sensor",
+	number        = "AS5055A",
 	year          =  2014,
 	month		  =  10,
 	note          = "Rev. v2-06"
 }
 
+@manual{
+	organization  = "Texas Instruments",
+	title         = "DRV8872 3.6-A Brushed DC Motor Driver With Fault Reporting",
+	number        = "DRV8872",
+	year          =  2016,
+	month		  =  7,
+	note          = "Rev. SLVSCZ0C"
+}
 
+@manual{
+	organization  = "Universal Serial Bus",
+	title         = "Device  Class  Definition  for  Human  Interface  Devices  (HID) ",
+	year          =  2001,
+	month		  =  6,
+	note          = "Rev. 1.11"
+}
 
+@manual{
+	organization  = "Purdue University",
+	title         = "PCB Design Specifications",
+	year          =  2011,
+	month		  =  7,
+	note          = "Rev. 1.0"
+}
+
+@manual{
+	organization  = "Burr-Brown Products from Texas Instruments",
+	title         = "Low-Power,  Single-Supply,  CMOSINSTRUMENTATION  AMPLIFIERS",
+	number        = "INA332",
+	year          =  2001,
+	month		  =  9,
+	note          = "SBOS216B "
+}
+
+@manual{
+	organization  = "Texas Instruments",
+	title         = "1-OF-2 NONINVERTING DEMULTIPLEXER WITH 3-STATE DESELECTED OUTPUT",
+	number        = "SN74LVC1G18",
+	year          =  2012,
+	month		  =  7,
+	note          = "SCES406K"
+}
+
+@manual{
+	organization  = "Texas Instruments",
+	title         = "SYS/BIOS  (TI-RTOS  Kernel) User's  Guide",
+	number        = "SYS/BIOS",
+	year          =  2017,
+	month		  =  5,
+	note          = "SPRUEX3T"
+}
+
+@manual{
+	organization  = "Texas Instruments",
+	title         = "TI-RTOS  2.16  for  TivaC Getting Started Guide",
+	number        = "TI-RTOS 2.16",
+	year          =  2016,
+	month		  =  2,
+	note          = "SPRUHU5D"
+}
+@manual{
+	organization  = "Texas Instruments",
+	title         = "TivaWare™  USB  Library User's Guide",
+	number        = "sw-tm4c-usbl-ug-2.1.3.156",
+	year          =  2016,
+	month		  =  7,
+	note          = "SPMU297D"
+}
+@manual{
+	organization  = "Texas Instruments",
+	title         = "TivaWare™  Peripheral  Driver  Library",
+	number        = "SW-TM4C-DRL-UG-2.1.3.156",
+	year          =  2016,
+	month		  =  7,
+	note          = "SPMU298D"
+}
+@manual{
+	organization  = "Texas Instruments",
+	title         = "Tiva™ TM4C123GH6PM  Microcontroller Data Sheet",
+	number        = "TM4C123GH6PM",
+	year          =  2014,
+	note          = "SPMS376E"
+}
+@manual{
+	organization  = "Texas Instruments",
+	title         = "Tiva™ C Series TM4C123G LaunchPad Evaluation Board User's Guide",
+	number        = "TM4C123G",
+	year          =  2013,
+	month		  =  4,
+	note          = "SPMU296"
+}
