removed acceptance criteria section

--- a/Appendices/Past_Work.tex
+++ b/Appendices/Past_Work.tex
@@ -14,7 +14,7 @@ We will create a software application to interface with a constructed arm. The u
 \newline
 In this document, we will outline some existing robot arms and highlight the differences between these arms and our arm kit. Next, we discuss what work there is to be done on this project. After discussing the work to be done, we will state how this work will satisfy the capstone design requirements for each of the three disciplines represented by our group members. Then, we state the constraints we expect going forward with this project. Next, the acceptance criteria for any deliverables at the end of this project will be outlined. Finally, we will state an estimated timeline for this project.
 
-\subsubsubsection{Modular Robotic Arm}
+\subsection{Modular Robotic Arm}
 This project aimed to close the market gap between inexpensive toy robot arms and expensive professional grade industrial arms. The group aimed to do this by designing a single joint that could be used to assemble a robot arm. Ultimately, a single DOF joint that was heavy, difficult to manufacture, and expensive to produce was designed and constructed. In their future recommendations section, the group stated that the goal of designing a modular robot arm was possible but their design was not the solution \cite{MRA}.
 
 \subsubsection{Our Robotic Arm System}
