made ALL THE STUPID APPENDICES into images with captions

--- a/Appendices/CAN_Transceiver.tex
+++ b/Appendices/CAN_Transceiver.tex
@@ -2,7 +2,21 @@
 \section{CAN Transceiver}
 \end{flushleft}
 \label{app:can_transceiver}
-\centering
-\includegraphics[page=1,width=\textwidth,angle=270]{PDFs/can_transceiver.PDF} \newpage
-\includegraphics[page=2,width=\textwidth,angle=270]{PDFs/can_transceiver.PDF} \newpage
-\includegraphics[page=3,width=\textwidth,angle=270]{PDFs/can_transceiver.PDF} \newpage
+\begin{figure}[H]
+	\centering
+	\includegraphics[page=1,scale=0.8,angle=270]{PDFs/can_transceiver.PDF}
+	\caption{Circuit diagram for CAN transceiver PCB}
+	\label{fig:can_transceiver_circuit}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=1]{can_transceiver} 
+	\caption{PCB composite for the CAN transceiver PCB}
+	\label{fig:can_transceiver_pcb}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[page=3,width=\textwidth]{PDFs/can_transceiver.PDF} 
+	\caption{Bill of materials for the CAN transceiver PCB}
+	\label{fig:can_transceiver_bom}
+\end{figure}
