--- a/Appendices/Load_Cell_Amp.tex
+++ b/Appendices/Load_Cell_Amp.tex
@@ -2,7 +2,21 @@
 \section{Load Cell Amplifier}
 \end{flushleft}
 \label{app:load_cell_amp}
-\centering
-\includegraphics[page=1,width=\textwidth,angle=270]{PDFs/load_cell_amp.PDF} \newpage
-\includegraphics[page=2,width=\textwidth,angle=270]{PDFs/load_cell_amp.PDF} \newpage
-\includegraphics[page=3,width=\textwidth,angle=270]{PDFs/load_cell_amp.PDF} \newpage
+\begin{figure}[H]
+	\centering
+	\includegraphics[page=1,scale=0.8,angle=270]{PDFs/load_cell_amp.PDF}
+	\caption{Circuit diagram for load cell amplifier PCB}
+	\label{fig:load_cell_amp_circuit}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=1]{load_cell_amp} 
+	\caption{PCB composite for the load cell amplifier PCB}
+	\label{fig:load_cell_amp_pcb}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[page=3,width=\textwidth]{PDFs/load_cell_amp.PDF} 
+	\caption{Bill of materials for the load cell amplifier PCB}
+	\label{fig:load_cell_amp_bom}
+\end{figure}
