--- a/Appendices/Motor_Driver.tex
+++ b/Appendices/Motor_Driver.tex
@@ -2,7 +2,22 @@
 \section{Motor Driver}
 \end{flushleft}
 \label{app:motor_driver}
-\centering
-\includegraphics[page=1,width=\textwidth,angle=270]{PDFs/motor_driver.PDF} \newpage
-\includegraphics[page=2,width=\textwidth,angle=270]{PDFs/motor_driver.PDF} \newpage 
-\includegraphics[page=3,width=\textwidth,angle=270]{PDFs/motor_driver.PDF} \newpage
+\begin{figure}[H]
+	\centering
+	\includegraphics[page=1,scale=0.8,angle=270]{PDFs/motor_driver.PDF} 
+	\caption{Circuit diagram for motor driver PCB}
+	\label{fig:motor_driver_circuit}
+\end{figure}
+\newpage
+\begin{figure}[H]
+	\centering
+	\includegraphics[width=\textwidth]{motor_driver} 
+	\caption{PCB composite for the motor driver PCB}
+	\label{fig:motor_driver_pcb}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[page=3,width=\textwidth]{PDFs/motor_driver.PDF} 
+	\caption{Bill of materials for the motor driver PCB}
+	\label{fig:motor_driver_bom}
+\end{figure}
