--- a/Appendices/Motor_Driver_Current.tex
+++ b/Appendices/Motor_Driver_Current.tex
@@ -2,7 +2,22 @@
 \section{Motor Driver with Current Sensor}
 \end{flushleft}
 \label{app:motor_driver_current}
-\centering
-\includegraphics[page=1,width=\textwidth,angle=270]{PDFs/motor_driver_with_current_sensor.PDF} \newpage
-\includegraphics[page=2,width=\textwidth,angle=270]{PDFs/motor_driver_with_current_sensor.PDF} \newpage
-\includegraphics[page=3,width=\textwidth,angle=270]{PDFs/motor_driver_with_current_sensor.PDF} \newpage
+\begin{figure}[H]
+	\centering
+	\includegraphics[page=1,scale=0.8,angle=270]{PDFs/motor_driver_with_current_sensor.PDF} 
+	\caption{Circuit diagram for motor driver with current sensor PCB}
+	\label{fig:motor_driver_current_circuit}
+\end{figure}
+\newpage
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=1]{motor_driver_with_current_sensor} 
+	\caption{PCB composite for the motor driver with current sensor PCB}
+	\label{fig:motor_driver_current_pcb}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[page=3,width=\textwidth]{PDFs/motor_driver_with_current_sensor.PDF} 
+	\caption{Bill of materials for the motor driver with current sensor PCB}
+	\label{fig:motor_driver_current_bom}
+\end{figure}
