--- a/Appendices/SolidworksDrawings.tex
+++ b/Appendices/SolidworksDrawings.tex
@@ -2,16 +2,65 @@
 \section{Solidworks Drawings}
 \end{flushleft}
 \label{app:SolidworksDrawings}
+\begin{figure}[H]
+	\centering
+	\includegraphics[page=1,scale=0.7,angle=270]{Solidworks/d_shaft_reciever}
+	\caption{}
+	\label{fig:d_shaft_receiver}
+\end{figure}
+\begin{figure}[H]
 \centering
-\includegraphics[width=\textwidth,angle=270]{Solidworks/d_shaft_reciever} \newpage
-\includegraphics[width=\textwidth,angle=270]{Solidworks/end_effector_mount} \newpage
-\includegraphics[width=\textwidth,angle=270]{Solidworks/end_of_arm} \newpage
-\includegraphics[width=\textwidth,angle=270]{Solidworks/idler_shaft} \newpage
-\includegraphics[width=\textwidth,angle=270]{Solidworks/main_shaft} \newpage
-\includegraphics[width=\textwidth,angle=270]{Solidworks/servo_horn_connector} \newpage
-\includegraphics[width=\textwidth,angle=270]{Solidworks/sidewall} \newpage
-\includegraphics[width=\textwidth,angle=270]{Solidworks/top_plate} \newpage
-\includegraphics[width=\textwidth,angle=270]{Solidworks/bottom_plate} \newpage
-\includegraphics[width=\textwidth,angle=270]{Solidworks/bottom_plate_cradle} \newpage
+\includegraphics[page=1,scale=0.7,angle=270]{Solidworks/end_effector_mount}
+\caption{}
+\label{fig:end_effector_mount}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[page=1,scale=0.7,angle=270]{Solidworks/end_of_arm}
+\caption{}
+\label{fig:end_of_arm}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[page=1,scale=0.7,angle=270]{Solidworks/idler_shaft}
+\caption{}
+\label{fig:idler_shaft}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[page=1,scale=0.7,angle=270]{Solidworks/main_shaft}
+\caption{}
+\label{fig:main_shaft}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[page=1,scale=0.7,angle=270]{Solidworks/servo_horn_connector}
+\caption{}
+\label{fig:servo_horn_connector}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[page=1,scale=0.7,angle=270]{Solidworks/sidewall}
+\caption{}
+\label{fig:sidewall}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[page=1,scale=0.7,angle=270]{Solidworks/top_plate}
+\caption{}
+\label{fig:top_plate}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[page=1,scale=0.7,angle=270]{Solidworks/bottom_plate}
+\caption{}
+\label{fig:bottom_plate}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[page=1,scale=0.7,angle=270]{Solidworks/bottom_plate_cradle}
+\caption{}
+\label{fig:bottom_plate_cradle}
+\end{figure}
 
 
