--- a/Appendices/TM4C_Dev_Board.tex
+++ b/Appendices/TM4C_Dev_Board.tex
@@ -2,8 +2,21 @@
 \section{TM4C123GH6PM Dev Board}
 \end{flushleft}
 \label{app:tm4c_dev_board}
-\begin{center}
-\includegraphics[page=1,width=\textwidth,angle=270]{PDFs/tm4c123_dev_board.PDF} \newpage
-\includegraphics[page=2,width=\textwidth,angle=270]{PDFs/tm4c123_dev_board.PDF} \newpage
-\includegraphics[page=3,width=\textwidth,angle=270]{PDFs/tm4c123_dev_board.PDF} \newpage
-\end{center}
+\begin{figure}[H]
+	\centering
+	\includegraphics[page=1,scale=0.8,angle=270]{PDFs/tm4c123_dev_board.PDF}
+	\caption{Circuit diagram for tm4c123 dev board PCB}
+	\label{fig:tm4c123_dev_board_circuit}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[scale=1]{tm4c123_dev_board} 
+	\caption{PCB composite for the load cell amplifier PCB}
+	\label{fig:tm4c123_dev_board_pcb}
+\end{figure}
+\begin{figure}[H]
+	\centering
+	\includegraphics[page=3,width=\textwidth]{PDFs/tm4c123_dev_board.PDF} 
+	\caption{Bill of materials for the load cell amplifier PCB}
+	\label{fig:tm4c123_dev_board_bom}
+\end{figure}
