--- a/Appendices/SolidworksDrawings.tex
+++ b/Appendices/SolidworksDrawings.tex
@@ -5,61 +5,61 @@
 \begin{figure}[H]
 	\centering
 	\includegraphics[page=1,scale=0.7,angle=270]{Solidworks/d_shaft_reciever}
-	\caption{}
+	\caption{D shaft receiver}
 	\label{fig:d_shaft_receiver}
 \end{figure}
 \begin{figure}[H]
 \centering
 \includegraphics[page=1,scale=0.7,angle=270]{Solidworks/end_effector_mount}
-\caption{}
+\caption{End effector mount}
 \label{fig:end_effector_mount}
 \end{figure}
 \begin{figure}[H]
 \centering
 \includegraphics[page=1,scale=0.7,angle=270]{Solidworks/end_of_arm}
-\caption{}
+\caption{End of Arm}
 \label{fig:end_of_arm}
 \end{figure}
 \begin{figure}[H]
 \centering
 \includegraphics[page=1,scale=0.7,angle=270]{Solidworks/idler_shaft}
-\caption{}
+\caption{Idler shaft}
 \label{fig:idler_shaft}
 \end{figure}
 \begin{figure}[H]
 \centering
 \includegraphics[page=1,scale=0.7,angle=270]{Solidworks/main_shaft}
-\caption{}
+\caption{Main shaft}
 \label{fig:main_shaft}
 \end{figure}
 \begin{figure}[H]
 \centering
 \includegraphics[page=1,scale=0.7,angle=270]{Solidworks/servo_horn_connector}
-\caption{}
+\caption{Servo horn connector}
 \label{fig:servo_horn_connector}
 \end{figure}
 \begin{figure}[H]
 \centering
 \includegraphics[page=1,scale=0.7,angle=270]{Solidworks/sidewall}
-\caption{}
+\caption{Sidewall}
 \label{fig:sidewall}
 \end{figure}
 \begin{figure}[H]
 \centering
 \includegraphics[page=1,scale=0.7,angle=270]{Solidworks/top_plate}
-\caption{}
+\caption{Top plate}
 \label{fig:top_plate}
 \end{figure}
 \begin{figure}[H]
 \centering
 \includegraphics[page=1,scale=0.7,angle=270]{Solidworks/bottom_plate}
-\caption{}
+\caption{Bottom plate}
 \label{fig:bottom_plate}
 \end{figure}
 \begin{figure}[H]
 \centering
 \includegraphics[page=1,scale=0.7,angle=270]{Solidworks/bottom_plate_cradle}
-\caption{}
+\caption{Bottom plate cradle}
 \label{fig:bottom_plate_cradle}
 \end{figure}
 
