--- a/main.tex
+++ b/main.tex
@@ -115,6 +115,7 @@ Craig Putnam \\
 \newpage
 	\pagenumbering{roman}
 	\include{Chapters/Abstract}
+	\include{Chapters/Acknowledgements}
 	\tableofcontents
 	\newpage
 	\listoffigures
